logs/2023-12-04-14-34-35/serverbuild.log
main.c: In function ‘handler_msg’:
main.c:18:23: warning: passing argument 1 of ‘ftpserver_process’ makes integer from pointer without a cast [-Wint-conversion]
   18 |     ftpserver_process(session);
      |                       ^~~~~~~
      |                       |
      |                       UserSession *
In file included from main.c:1:
ftpServer.h:15:28: note: expected ‘int’ but argument is of type ‘UserSession *’
   15 | void ftpserver_process(int sock_ctl);
      |                        ~~~~^~~~~~~~
main.c:19:18: error: ‘UserSession’ has no member named ‘sock’
   19 |     close(session->sock);
      |                  ^~
main.c: In function ‘main’:
main.c:43:16: error: ‘UserSession’ has no member named ‘sock’
   43 |         session->sock = connf;
      |                ^~
ftpServer.c:74:24: error: unknown type name ‘UserSession’
   74 | void ftpserver_process(UserSession *session)
      |                        ^~~~~~~~~~~
ftpServer.c: In function ‘ftpserver_check_user’:
ftpServer.c:244:33: warning: passing argument 2 of ‘getline’ from incompatible pointer type [-Wincompatible-pointer-types]
  244 |         while(-1!=getline(&line,&len,fd))
      |                                 ^~~~
      |                                 |
      |                                 int *
In file included from ../common/common.h:13,
                 from ftpServer.h:4,
                 from ftpServer.c:11:
/usr/include/stdio.h:646:46: note: expected ‘size_t * restrict’ {aka ‘long unsigned int * restrict’} but argument is of type ‘int *’
  646 |                           size_t *__restrict __n,
      |                           ~~~~~~~~~~~~~~~~~~~^~~
ftpServer.c: In function ‘ftpserver_list’:
ftpServer.c:350:9: warning: implicit declaration of function ‘sendfile’ [-Wimplicit-function-declaration]
  350 |         sendfile(sock_data,fd,NULL,size);
      |         ^~~~~~~~
ftpServer.c:335:51: warning: ‘%s’ directive output may be truncated writing up to 1023 bytes into a region of size 250 [-Wformat-truncation=]
  335 |         snprintf(command, sizeof(command), "ls -l %s > temp.txt", FTP_PATH);
      |                                                   ^~              ~~~~~~~~
ftpServer.c:335:9: note: ‘snprintf’ output between 18 and 1041 bytes into a destination of size 256
  335 |         snprintf(command, sizeof(command), "ls -l %s > temp.txt", FTP_PATH);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ftpServer.c: In function ‘ftpserver_make_directory’:
ftpServer.c:567:43: warning: ‘%s’ directive output may be truncated writing up to 1023 bytes into a region of size 512 [-Wformat-truncation=]
  567 |     snprintf(dir_path, sizeof(dir_path), "%s%s", FTP_PATH, path);
      |                                           ^~     ~~~~~~~~
ftpServer.c:567:5: note: ‘snprintf’ output 1 or more bytes (assuming 1024) into a destination of size 512
  567 |     snprintf(dir_path, sizeof(dir_path), "%s%s", FTP_PATH, path);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
